web/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
@import "tailwindcss";
@plugin "tailwindcss-animate";
@custom-variant dark (&:is(.dark *));

@utility border-l-solid {
  border-left-style: solid;
}

@utility border-b-timeline {
  border-bottom-style: ridge;
  border-bottom-width: 5px;
}

@utility uma-label {
  @apply flex flex-row gap-2 w-fit items-center cursor-pointer;
}

@theme inline {
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: #5ec00c;
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: #FF3376;
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--primary);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  /* --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring); */
}

:root {
  --radius: 0.75rem;
  --background: oklch(0.98 0.01 240);
  --foreground: oklch(0.1 0.01 240);
  --card: oklch(1 0 0 / 0.8);
  --card-foreground: oklch(0.1 0.01 240);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.1 0.01 240);
  --primary: oklch(0.6 0.2 15);
  --primary-foreground: oklch(0.98 0.01 240);
  --secondary: oklch(0.94 0.01 240);
  --secondary-foreground: oklch(0.1 0.01 240);
  --muted: oklch(0.94 0.01 240);
  --muted-foreground: oklch(0.4 0.01 240);
  --accent: oklch(0.94 0.01 240);
  --accent-foreground: oklch(0.1 0.01 240);
  --destructive: oklch(0.6 0.2 15);
  --border: oklch(0.9 0.01 240);
  --input: oklch(0.9 0.01 240);
  --ring: oklch(0.6 0.2 15);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  /* --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0); */
}

.dark {
  --background: oklch(0.05 0.01 240);
  --foreground: oklch(0.95 0.01 240);
  --card: oklch(0.35 0.02 300 / 0.7);
  --card-foreground: oklch(0.95 0.01 240);
  --popover: oklch(0.1 0.01 240);
  --popover-foreground: oklch(0.95 0.01 240);
  --primary: oklch(0.6 0.2 15);
  --primary-foreground: oklch(0.98 0.01 240);
  --secondary: oklch(0.35 0.01 240);
  --secondary-foreground: oklch(0.95 0.01 240);
  --muted: oklch(0.35 0.01 240);
  --muted-foreground: oklch(0.8 0.01 240);
  --accent: oklch(0.35 0.01 240);
  --accent-foreground: oklch(0.95 0.01 240);
  --destructive: oklch(0.6 0.2 15);
  --border: oklch(0.45 0.01 240);
  --input: oklch(0.45 0.01 240);
  --ring: oklch(0.6 0.2 15);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  /* --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0); */
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  body {
    @apply bg-background text-foreground font-sans;
    font-family: "Poppins", sans-serif;
  }

  .box {
    @apply bg-card p-6 rounded-xl shadow-lg border border-border/20;
  }
}

html {
  scrollbar-gutter: stable;
}

.text-primary {
  transition: color 0.2s ease;
}

.bg-triangles {
  position: relative;
  z-index: 0;
}

.bg-triangles::before {
  content: "";
  position: fixed;
  inset: 0;
  background-image: url(assets/background.jpg);
  background-position: center;
  background-size: cover;
  z-index: -1;
  pointer-events: none;
  transition: filter 0.3s ease-out;
}

.dark .bg-triangles::before {
  filter: invert(1) hue-rotate(180deg) brightness(1.0);
}

.uma-btn {
  position: relative;
  z-index: 10;
  overflow: hidden;
  transition: all 0.3s ease-in-out;
  box-shadow: 0 3px 1px -1px #111c7c77;
  border-radius: calc(var(--radius) - 2px);
  /* Assuming it's .rounded-md, need a better solution */
  border: 1px solid var(--border);
  cursor: pointer;
}

.dark .uma-btn {
  box-shadow: 0 3px 1px -1px #000a;
}

.uma-btn.bg-primary {
  color: #fff;
  border-color: color-mix(in srgb, var(--color-primary), black 20%);
}

.uma-btn::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  border-radius: calc(var(--radius) - 2px);
  /* Assuming it's .rounded-md, need a better solution */
  transition: all 0.3s ease;
  box-shadow: inset 0 0 9px 1px #fff;
  background-blend-mode: multiply;
  background-image: url(assets/bg_title.png);
  --btn-filter: brightness(1);
  filter: var(--btn-filter);
}

.dark .uma-btn::after {
  --btn-filter: invert(1) hue-rotate(180deg) brightness(1.3);
  box-shadow: inset 0 0 9px 1px #fff6, inset 0 0 0 4rem #0002
}

.uma-btn.bg-primary::after {
  background-image: linear-gradient(color-mix(in srgb, var(--color-primary), white 15%), var(--color-primary)), url(assets/bg_title.png);
  box-shadow: inset 0 0 6px 0px #fff6;
}

.dark .uma-btn.bg-primary::after {
  /* box-shadow: inset 0 0 6px 0px #0004; */
  --btn-filter: brightness(1);
  background-image: linear-gradient(color-mix(in srgb, var(--color-primary), black 15%), var(--color-primary)), url(assets/bg_title.png);
}

.uma-btn:hover::after {
  filter: var(--btn-filter) brightness(1.1);
}

/* .dark .uma-btn:hover::after {
  filter: var(--btn-filter) brightness(0.9);
} */

.section-card {
  width: 100%;
  height: fit-content;
  animation-duration: .3s;
  --tw-duration: .3s;
  --tw-enter-scale: initial;
  --tw-enter-rotate: initial;
  --tw-enter-translate-x: initial;
  --tw-enter-translate-y: .5rem;
  animation-name: enter;
  transition-property: all;
  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
  --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, #0000001a), 0 4px 6px -4px var(--tw-shadow-color, #0000001a);
  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
  padding: calc(var(--spacing) * 6);
  background-color: var(--card);
  border-style: var(--tw-border-style);
  border-width: 1px;
  border-color: color-mix(in oklab, var(--border) 80%, transparent);
  border-radius: calc(var(--radius) + 4px);
  outline-color: color-mix(in oklab, var(--primary) 50%, transparent);
}

label.disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

